# athena-atlas

./: .clang-format  README.md  release_notes.md  xAODDecaysFinalStateFilter_Common.py  xAODTauFilter_Common.py
AtlasGeometryCommon/CrackRegionGeoModel/: CMakeLists.txt
AtlasGeometryCommon/CrackRegionGeoModel/CrackRegionGeoModel/: ATLAS_CHECK_THREAD_SAFETY  CrackDMConstruction.h
AtlasGeometryCommon/CrackRegionGeoModel/src/: CrackDMConstruction.cxx
Calorimeter/CaloRecGPU/: CMakeLists.txt
Calorimeter/CaloRecGPU/CaloRecGPU/: BaseDefinitions.h  CUDAFriendlyClasses.h  CaloClusterGPUProcessor.h  CaloClusterGPUTransformers.h  CaloGPUHybridClusterProcessor.h  CaloGPUTimed.h  ConstantInfoDefinitions.h  DataHolders.h  EtaPhiMap.h  EventInfoDefinitions.h  Helpers.h  IGPUKernelSizeOptimizer.h  IGPUKernelSizeOptimizerSvc.h  NeighArr.h  StandaloneDataIO.h  TagDefinitions.h
Calorimeter/CaloRecGPU/extra/: ATLAS_plots.txt  cell_plots.txt  diffs_plots.txt
Calorimeter/CaloRecGPU/python/: CaloRecGPUConfig.py  CaloRecGPUConfigurator.py  CaloRecGPUFlags.py  GPUClusterSplitterConfig.py  TACandGPUSplitterConfig.py  TopoAutomatonClusteringConfig.py
Calorimeter/CaloRecGPU/src/: BasicConstantGPUDataExporter.cxx  BasicConstantGPUDataExporter.h  BasicEventDataGPUExporter.cxx  BasicEventDataGPUExporter.h  BasicGPUClusterInfoCalculator.cxx  BasicGPUClusterInfoCalculator.h  BasicGPUClusterInfoCalculatorImpl.cu  BasicGPUClusterInfoCalculatorImpl.h  BasicGPUToAthenaImporter.cxx  BasicGPUToAthenaImporter.h  CUDA_Helpers.cu  CaloCPUOutput.cxx  CaloCPUOutput.h  CaloCellsCounterCPU.cxx  CaloCellsCounterCPU.h  CaloCellsCounterGPU.cxx  CaloCellsCounterGPU.h  CaloClusterDeleter.cxx  CaloClusterDeleter.h  CaloGPUClusterAndCellDataMonitor.cxx  CaloGPUClusterAndCellDataMonitor.h  CaloGPUClusterAndCellDataMonitorOptions.h  CaloGPUHybridClusterProcessor.cxx  CaloGPUHybridClusterProcessor.h  CaloGPUOutput.cxx  CaloGPUOutput.h  CaloMomentsDumper.cxx  CaloMomentsDumper.h  CaloTopoClusterSplitterGPU.cxx  CaloTopoClusterSplitterGPU.h  CaloTopoClusterSplitterGPUImpl.cu  CaloTopoClusterSplitterGPUImpl.h  DataHolders.cu  ExtraTagDefinitions.h  FPHelpers.h  GPUClusterInfoAndMomentsCalculator.cxx  GPUClusterInfoAndMomentsCalculator.h  GPUClusterInfoAndMomentsCalculatorImpl.cu  GPUClusterInfoAndMomentsCalculatorImpl.h  GPUKernelSizeOptimizerSvc.cxx  (+14 more)
Calorimeter/CaloRecGPU/test/: CaloRecGPUTesting.py  CaloRecGPUTestingChecker.py  CaloRecGPUTestingConfig.py  CaloRecGPU_count_cells_to_file.py  CaloRecGPU_measure_times.py  CaloRecGPU_measure_times_sync.py  CaloRecGPU_simple_grow_test.py  CaloRecGPU_simple_growsplit_cross_test.py  CaloRecGPU_simple_growsplit_test.py  CaloRecGPU_simple_moments_test.py  CaloRecGPU_simple_run.py  CaloRecGPU_simple_run_monitoring.py  CaloRecGPU_simple_split_test.py  CaloRecGPU_time_CPU_and_overheads.py  CaloRecGPU_time_GPU_and_overheads.py  CaloRecGPU_time_overheads.py  PlotterConfigurator.py  test_CaloRecGPU_4_2_0.py  test_CaloRecGPU_4_2_0_abs.py  test_CaloRecGPU_4_2_2.py  test_CaloRecGPU_6_3_3.py
Calorimeter/CaloUtils/: CMakeLists.txt
Calorimeter/CaloUtils/CaloUtils/: CaloClusterProcessor.h  CaloClusterStoreHelper.h  CaloLCCoeffHelper.h  CaloTopoTowerBuilderToolBase.h  CaloTowerBuilderToolBase.h  CaloUtilsDict.h  selection.xml
Calorimeter/CaloUtils/share/: CaloLayerCalculator_test.ref  CaloVertexedCell_test.ref  CaloVertexedCluster_test.ref  ToolWithConstants_test.ref
Calorimeter/CaloUtils/src/: CaloClusterProcessor.cxx  CaloClusterStoreHelper.cxx  CaloLCCoeffHelper.cxx  CaloLCDeadMaterialTool.cxx  CaloLayerCalculator.cxx  CaloTopoTowerBuilderToolBase.cxx  CaloTowerBuilderToolBase.cxx  CaloTowerBuilderToolTestAlg.cxx  CaloTowerStore.cxx  xAODClusterCompressor.cxx
Calorimeter/CaloUtils/test/: CaloClusterProcessor_test.cxx  CaloLayerCalculator_test.cxx  CaloVertexedCell_test.cxx  ToolWithConstants_test.py
Commission/CommissionRec/: CMakeLists.txt
Commission/CommissionRec/src/: ComTimeRec.cxx  ComTimeRec.h  CosmicTriggerTimeTool.cxx
Control/AthenaConfiguration/: CMakeLists.txt
Control/AthenaConfiguration/python/: AccumulatorCache.py  AllConfigFlags.py  AnalysisApp.py  AthConfigFlags.py  AtlasSemantics.py  AutoConfigFlags.py  AutoConfigOnlineRecoFlags.py  ComponentAccumulator.py  ComponentFactory.py  DebuggingContext.py  Deduplication.py  DetectorConfigFlags.py  Enums.py  FPEAndCoreDumpConfig.py  GeoModelConfigFlags.py  LegacySupport.py  MainServicesConfig.py  OldFlags2NewFlags.py  PropSetterProxy.py  RunToTimestampData.py  TestDefaults.py  Utils.py
Control/AthenaConfiguration/share/: CARunner.py  FPEAndCoreDump.ref  confTool.py  referenceDuplicates.txt
Control/AthenaConfiguration/test/: testAccumulatorCache.py  testAllConfigFlags_AOD_MC.py  testAllConfigFlags_AOD_data.py  testAllConfigFlags_BS.py  testAllConfigFlags_EVNT.py  (+9 more)
Control/PileUpMT/: CMakeLists.txt
Control/PileUpTools/: CMakeLists.txt
DataQuality/ZLumiScripts/: CMakeLists.txt
Database/AtlasCLHEPDict/: CMakeLists.txt
DetectorDescription/Identifier/: CMakeLists.txt
Event/EventPrimitives/: CMakeLists.txt
ForwardDetectors/ForwardTracker/: CMakeLists.txt
Generators/Contur_i/: CMakeLists.txt  README.md
Generators/EvgenJobTransforms/: CMakeLists.txt
Generators/GeneratorFilters/: CMakeLists.txt  README.md
Generators/Pythia8_i/: CMakeLists.txt  Pythia8EnvironmentConfig.cmake  README.md
Generators/Sherpa_i/: CMakeLists.txt
InnerDetector/InDetGNNTracking/: ATLAS_CHECK_THREAD_SAFETY  CMakeLists.txt
LArCalorimeter/LArCondTools/: ATLAS_CHECK_THREAD_SAFETY  CMakeLists.txt
LArCalorimeter/LArDigitization/: CMakeLists.txt
LArCalorimeter/LArElecCalib/: CMakeLists.txt
LArCalorimeter/LArTools/: CMakeLists.txt
MuonSpectrometer/MuonGMdbObjects/: CMakeLists.txt
PhysicsAnalysis/JpsiUpsilonTools/: CMakeLists.txt
Reconstruction/DiTauRec/: CMakeLists.txt  README.rst
Reconstruction/DiTauRecTools/: CMakeLists.txt
Simulation/HitManagement/: CMakeLists.txt
TileCalorimeter/TileDetDescr/: CMakeLists.txt
TileCalorimeter/TileRawUtils/: CMakeLists.txt
TileCalorimeter/TileSimAlgs/: CMakeLists.txt
(+20499 files in other folders)
